--- a/FoodScanner/app/build.gradle
+++ b/FoodScanner/app/build.gradle
@@ -21,4 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile "com.android.support:design:23.0.1"
 }
