--- a/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
+++ b/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,10 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>com.example.backend.MyEndpoint</param-value>
+            <param-value>
+                com.example.backend.apis.MyEndpoint,
+                com.example.backend.apis.FoodItemEndpoint
+            </param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
