added calculation, nutritionResult, and CalculationEndpoint

--- a/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
+++ b/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,8 @@
         <init-param>
             <param-name>services</param-name>
             <param-value>
-                com.example.backend.apis.MyEndpoint,
-                com.example.backend.apis.FoodItemEndpoint
+                com.example.backend.apis.FoodItemEndpoint,
+                com.example.backend.apis.CalculationEndpoint
             </param-value>
         </init-param>
     </servlet>
