--- a/FoodScanner/app/src/main/AndroidManifest.xml
+++ b/FoodScanner/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name="senior_project.foodscanner.activities.LoginActivity"
+            android:name="senior_project.foodscanner.activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -42,8 +42,9 @@
         </activity>
 
         <activity
-            android:name="senior_project.foodscanner.activities.MainActivity"
-            android:label="@string/app_name" >
+            android:name="senior_project.foodscanner.activities.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
