--- a/FoodScanner/app/src/main/AndroidManifest.xml
+++ b/FoodScanner/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="senior_project.foodscanner" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
