--- a/FoodScanner/app/build.gradle
+++ b/FoodScanner/app/build.gradle
@@ -29,45 +29,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':backend', configuration: 'android-endpoints')
 
+    compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.android.support:design:23.0.1"
 
     compile "com.google.android.gms:play-services-identity:7.8.0"
-
-    compile(group: 'com.google.api-client', name: 'google-api-client', version: '1.20.0') {
-        // Exclude artifacts that the Android SDK/Runtime provides.
-        exclude(group: 'xpp3', module: 'xpp3')
-        exclude(group: 'org.apache.httpcomponents', module: 'httpclient')
-        exclude(group: 'junit', module: 'junit')
-        exclude(group: 'com.google.android', module: 'android')
-    }
-
-    // Add the Android extensions for the Google API client library.
-    // This will automatically include play services as long as you have download that library
-    // from the Android SDK manager.
-    // Add the Android extensions for the Google API client library.
-    compile(group: 'com.google.api-client', name: 'google-api-client-android',
-            version: '1.20.0') {
-        // Exclude play services. Explicitly include it above after you have installed Play
-        // services from the Android SDK manager.
-        exclude(group: 'com.google.android.google-play-services', module: 'google-play-services')
-
-        exclude(group: 'com.google.guava', module: 'guava-jdk5')
-    }
-
-    // END Google APIs
-
-    // The following client libraries make HTTP/JSON on Android easier.
-
-    // Android extensions for Google HTTP Client.
-    compile(group: 'com.google.http-client', name: 'google-http-client-android',
-            version: '1.20.0') {
-        exclude(group: 'com.google.android', module: 'android')
-    }
-
-    // This is used by the Google HTTP client library.
-    compile(group: 'com.google.guava', name: 'guava', version: '18.0')
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:support-v4:23.0.1'
 }
 
 repositories {
