Replaced Client ID for Android
Fixing the authentication required re-creating a new Android client ID.

Also added the email value into the gradle file since it was in the tutorial.

--- a/FoodScanner/backend/build.gradle
+++ b/FoodScanner/backend/build.gradle
@@ -33,6 +33,7 @@ appengine {
     downloadSdk = true
     appcfg {
         oauth2 = true
+        email = "mlenartowicz9134@gmail.com"
     }
     endpoints {
         getClientLibsOnBuild = true
