Added Settings Activity.
Changed the logout button on the calendar page to go to the settings page.

Changed app theme to the dark toolbar so the text will be white.

--- a/FoodScanner/app/src/main/AndroidManifest.xml
+++ b/FoodScanner/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             android:name=".activities.FoodItemActivity"
             android:label="@string/title_activity_food_adder" >
         </activity>
+        <activity android:name=".activities.SettingsActivity"
+            android:label="@string/title_activity_settings"/>
 
         <activity
             android:name="senior_project.foodscanner.activities.LoginActivity"
