Added Activity for Manually Setting Meal Times.
The button on the settings page now opens an activity to set the meal times. It also correctly reports the manual/automatic setting.

The buttons in the new activity can be enabled/disabled based on whether the user is setting the times manually.

--- a/FoodScanner/app/src/main/AndroidManifest.xml
+++ b/FoodScanner/app/src/main/AndroidManifest.xml
@@ -40,8 +40,12 @@
             android:name=".activities.FoodItemActivity"
             android:label="@string/title_activity_food_adder" >
         </activity>
-        <activity android:name=".activities.SettingsActivity"
+        <activity
+            android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings"/>
+        <activity
+            android:name=".activities.SettingsManualTimes"
+            android:label="@string/title_activity_settings_set_times"/>
 
         <activity
             android:name="senior_project.foodscanner.activities.LoginActivity"
