adding density entry and endpoint

--- a/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
+++ b/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
             <param-name>services</param-name>
             <param-value>
                 com.example.backend.apis.FoodItemEndpoint,
+                com.example.backend.apis.DensityEntryEndpoint,
                 com.example.backend.apis.MealEndpoint,
                 com.example.backend.apis.MyEndpoint
             </param-value>
