Switched to density activity & various changes
Null entries in the density database are ignored. Tapping the
bottom-right checkmark on the density page dismisses the keyboard, but
not the autocomplete results. Adjusted MealDetailsActivity layout.

--- a/FoodScanner/app/src/main/AndroidManifest.xml
+++ b/FoodScanner/app/src/main/AndroidManifest.xml
@@ -76,6 +76,12 @@
             android:screenOrientation="portrait" >
         </activity>
 
+        <activity
+            android:name=".activities.FoodDensityActivity"
+            android:label="@string/title_activity_food_density"
+            android:screenOrientation="portrait" >
+        </activity>
+
     </application>
 
 </manifest>
