--- a/FoodScanner/app/build.gradle
+++ b/FoodScanner/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "SeniorProject.foodscanner"
@@ -29,10 +29,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':backend', configuration: 'android-endpoints')
 
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.android.support:design:23.0.1"
-
+    compile "com.android.support:appcompat-v7:23.1.1"
+    compile "com.android.support:design:23.1.1"
+    compile "com.android.support:cardview-v7:23.1.1"
     compile "com.google.android.gms:play-services-identity:7.8.0"
+    compile "com.facebook.rebound:rebound:0.3.8"
 }
 
 repositories {
