--- a/FoodScanner/app/src/main/AndroidManifest.xml
+++ b/FoodScanner/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="senior_project.foodscanner" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
