--- a/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
+++ b/FoodScanner/backend/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+    <filter>
+        <filter-name>ObjectifyFilter</filter-name>
+        <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ObjectifyFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>SystemServiceServlet</servlet-name>
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>
-                com.example.backend.apis.FoodItemEndpoint,
+            <param-value>com.example.backend.apis.FoodItemEndpoint,
                 com.example.backend.apis.DensityEntryEndpoint,
                 com.example.backend.apis.MealEndpoint,
-                com.example.backend.apis.MyEndpoint
-            </param-value>
+                com.example.backend.apis.MyEndpoint,
+                com.example.backend.apis.BackendMealEndpoint,
+                com.example.backend.apis.BackendFoodItemEndpoint</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
